; ModuleID = '/home/carl/AnghaBench/libgit2/examples/extr_status.c_show_branch.c'
source_filename = "/home/carl/AnghaBench/libgit2/examples/extr_status.c_show_branch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_EUNBORNBRANCH = common dso_local global i32 0, align 4
@GIT_ENOTFOUND = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"failed to get current branch\00", align 1
@FORMAT_LONG = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [16 x i8] c"# On branch %s\0A\00", align 1
@.str.2 = private unnamed_addr constant [29 x i8] c"Not currently on any branch.\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"## %s\0A\00", align 1
@.str.4 = private unnamed_addr constant [17 x i8] c"HEAD (no branch)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @show_branch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @show_branch(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  store i8* null, i8** %6, align 8
  store i32* null, i32** %7, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @git_repository_head(i32** %7, i32* %8)
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @GIT_EUNBORNBRANCH, align 4
  %12 = icmp eq i32 %10, %11
  br i1 %12, label %17, label %13

13:                                               ; preds = %2
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* @GIT_ENOTFOUND, align 4
  %16 = icmp eq i32 %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %13, %2
  store i8* null, i8** %6, align 8
  br label %28

18:                                               ; preds = %13
  %19 = load i32, i32* %5, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %24, label %21

21:                                               ; preds = %18
  %22 = load i32*, i32** %7, align 8
  %23 = call i8* @git_reference_shorthand(i32* %22)
  store i8* %23, i8** %6, align 8
  br label %27

24:                                               ; preds = %18
  %25 = load i32, i32* %5, align 4
  %26 = call i32 @check_lg2(i32 %25, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i32* null)
  br label %27

27:                                               ; preds = %24, %21
  br label %28

28:                                               ; preds = %27, %17
  %29 = load i32, i32* %4, align 4
  %30 = load i32, i32* @FORMAT_LONG, align 4
  %31 = icmp eq i32 %29, %30
  br i1 %31, label %32, label %41

32:                                               ; preds = %28
  %33 = load i8*, i8** %6, align 8
  %34 = icmp ne i8* %33, null
  br i1 %34, label %35, label %37

35:                                               ; preds = %32
  %36 = load i8*, i8** %6, align 8
  br label %38

37:                                               ; preds = %32
  br label %38

38:                                               ; preds = %37, %35
  %39 = phi i8* [ %36, %35 ], [ getelementptr inbounds ([29 x i8], [29 x i8]* @.str.2, i64 0, i64 0), %37 ]
  %40 = call i32 @printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i8* %39)
  br label %50

41:                                               ; preds = %28
  %42 = load i8*, i8** %6, align 8
  %43 = icmp ne i8* %42, null
  br i1 %43, label %44, label %46

44:                                               ; preds = %41
  %45 = load i8*, i8** %6, align 8
  br label %47

46:                                               ; preds = %41
  br label %47

47:                                               ; preds = %46, %44
  %48 = phi i8* [ %45, %44 ], [ getelementptr inbounds ([17 x i8], [17 x i8]* @.str.4, i64 0, i64 0), %46 ]
  %49 = call i32 @printf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0), i8* %48)
  br label %50

50:                                               ; preds = %47, %38
  %51 = load i32*, i32** %7, align 8
  %52 = call i32 @git_reference_free(i32* %51)
  ret void
}

declare dso_local i32 @git_repository_head(i32**, i32*) #1

declare dso_local i8* @git_reference_shorthand(i32*) #1

declare dso_local i32 @check_lg2(i32, i8*, i32*) #1

declare dso_local i32 @printf(i8*, i8*) #1

declare dso_local i32 @git_reference_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
